--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,15 @@
+# Ignore core files related to Microsoft, MongoDB, and Python.
 core.Microsoft*
 core.mongo*
 core.python*
+# Ignore the 'env.py' file.
 env.py
+# Ignore Python compiled files and cache.
 __pycache__/
 *.py[cod]
+# Ignore 'node_modules' directory (common for JavaScript/Node.js projects).
 node_modules/
+# Ignore the '.github' directory.
 .github/
+# Ignore 'cloudinary_python.txt' file.
 cloudinary_python.txt
