--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,14 @@
+# 1. asgiref==3.7.2: ASGI (Asynchronous Server Gateway Interface) reference implementation.
+# 2. dj-database-url==0.5.0: Simplifies Django database configuration using URLs.
+# 3. Django==4.2.7: Popular Python web framework for building web applications.
+# 4. gunicorn==20.1.0: WSGI HTTP server commonly used for Django in production.
+# 5. psycopg2==2.9.9: PostgreSQL adapter for Python, used for database connections.
+# 6. sqlparse==0.4.4: SQL parsing library for Python.
+# 7. whitenoise==6.6.0: Middleware for serving static files in Django applications.
+
+
+
+
 asgiref==3.7.2
 dj-database-url==0.5.0
 Django==4.2.7
