--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ dj-database-url==0.5.0
 Django==4.2.7
 django-cloudinary-storage==0.3.0
 django-crispy-forms==2.1
+django-summernote==0.8.20.0
 gunicorn==20.1.0
 Pillow==10.1.0
 psycopg2==2.9.9
